Fixed body overflow issue

--- a/5-product-preview-card-component/sass/styles.scss
+++ b/5-product-preview-card-component/sass/styles.scss
@@ -75,6 +75,7 @@ body {
 // Margin padding and centering
 
 body {
+  margin: 0;
   display: flex;
   flex-direction: column;
   height: 100vh;
